--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "start": "npm run standardize && ng serve --port 5000 --aot",
     "build": "npm run standardize && ng build",
     "test": "ng test",
+    "test:debug": "ng test --sourcemaps=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "2predocker:build": "npm run build -- --prod && npm test -- --single-run && npm run e2e -- --no-delete-output-path",
+    "build:prod": "ng build --prod",
+    "test:prod": "npm test -- --browsers ChromiumNoSandbox --single-run && npm run e2e -- --no-delete-output-path",
+    "predocker:build": "npm run build:prod && npm run test:prod",
     "docker:build": "cross-conf-env docker image build . -t $npm_package_config_imageRepo:$npm_package_version",
     "postdocker:build": "npm run docker:tag",
     "docker:tag": " cross-conf-env docker image tag $npm_package_config_imageRepo:$npm_package_version $npm_package_config_imageRepo:latest",
