--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,20 +2,13 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:7.10
-    working_directory: ~/repo
+      - image: docker:17.12.0-ce-git
+    working_directory: /usr/src
     steps:
       - checkout
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-      - run: yarn install
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-      # run tests!
-      - run: yarn test
+      - setup_remote_docker:
+         # docker_layer_caching: true
+      - run:
+        name: Build Docker Image
+        command: |
+          docker build -f Dockerfile.integration .
