user profile, caching, guards, advanced forms

--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "scripts": {
     "ng": "ng",
     "standardize": "prettier **/*.ts --write",
-    "start": "npm run standardize && ng serve --port 5000 --aot",
+    "standardize:linux": "prettier '**/*.ts' --write",
+    "start": "npm run standardize && ng serve --port 5000",
     "build": "npm run standardize && ng build",
     "test": "ng test",
     "test:debug": "ng test --sourcemaps=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build:prod": "ng build --prod",
+    "premock:start": "npm run build:prod",
+    "mock:start": "docker-compose up",
+    "mock:stop": "docker-compose down",
     "test:prod": "npm test -- --browsers ChromiumNoSandbox --single-run && npm run e2e -- --no-delete-output-path",
     "predocker:build": "npm run build:prod && npm run test:prod",
     "docker:build": "cross-conf-env docker image build . -t $npm_package_config_imageRepo:$npm_package_version",
@@ -61,7 +65,10 @@
     "@angular/router": "5.2.5",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.1.1",
+    "jwt-decode": "^2.2.0",
     "rxjs": "^5.5.6",
+    "ts-enum-util": "^2.0.0",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
