--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "e2e": "ng e2e",
     "build:prod": "ng build --prod",
     "premock:start": "npm run build:prod",
+    "mock:standalone": "docker run -p 3000:3000 -t duluca/lemon-mart-swagger-server",
     "mock:start": "docker-compose up",
     "mock:stop": "docker-compose down",
     "test:prod": "npm test -- --browsers ChromiumNoSandbox --single-run && npm run e2e -- --no-delete-output-path",
