--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
     "standardize:linux": "prettier '**/*.ts' --write",
     "start": "npm run standardize && ng serve --port 5000",
     "build": "npm run standardize && ng build",
-    "test": "ng test",
-    "test:debug": "ng test --sourcemaps=false",
+    "test": "ng test --browsers Chrome",
+    "test:debug": "ng test --browsers Chrome --sourcemaps=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build:prod": "ng build --prod",
+    "build:integration": "docker build -f Dockerfile.integration .",
     "premock:start": "npm run build:prod",
     "mock:standalone": "docker run -p 3000:3000 -t duluca/lemon-mart-swagger-server",
     "mock:start": "docker-compose up",
     "mock:stop": "docker-compose down",
-    "test:prod": "npm test -- --browsers ChromiumNoSandbox --single-run && npm run e2e -- --no-delete-output-path",
+    "test:prod": "ng test --browsers ChromiumNoSandbox --single-run && npm run e2e -- --no-delete-output-path",
     "predocker:build": "npm run build:prod && npm run test:prod",
     "docker:build": "cross-conf-env docker image build . -t $npm_package_config_imageRepo:$npm_package_version",
     "postdocker:build": "npm run docker:tag",
