fixed integration tests

--- a/Dockerfile.integration
+++ b/Dockerfile.integration
@@ -14,7 +14,8 @@ RUN git clone $GIT_REPO .
 RUN npm install
 RUN npm run $BUILD_SCRIPT
 
-FROM rastasheep/alpine-node-chromium:6-alpine as tester
+# FROM rastasheep/alpine-node-chromium:6-alpine as tester
+FROM slapers/alpine-node-chromium as tester
 ENV BUILDER_SRC_DIR /usr/src
 ENV SRC_DIR /usr/src
 ENV TEST_SCRIPT test:prod
@@ -24,6 +25,7 @@ WORKDIR $SRC_DIR
 COPY --from=builder $BUILDER_SRC_DIR $SRC_DIR
 
 RUN npm run $TEST_SCRIPT
+# RUN npm run $TEST_SCRIPT:e2e
 
 FROM duluca/minimal-nginx-web-server:1.13.8-alpine
 ENV BUILDER_SRC_DIR /usr/src
