--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build:prod": "ng build --prod",
-    "build:integration": "docker build -f Dockerfile.integration .",
+    "build:integration": "docker build --no-cache -f Dockerfile.integration .",
     "premock:start": "npm run build:prod",
     "mock:standalone": "docker run -p 3000:3000 -t duluca/lemon-mart-swagger-server",
     "mock:start": "docker-compose up",
     "mock:stop": "docker-compose down",
-    "test:prod": "ng test --browsers ChromiumNoSandbox --single-run && npm run e2e -- --no-delete-output-path",
+    "test:prod": "ng test --browsers ChromiumNoSandbox --single-run",
+    "test:prod:e2e": "npm run e2e -- --no-delete-output-path",
     "predocker:build": "npm run build:prod && npm run test:prod",
     "docker:build": "cross-conf-env docker image build . -t $npm_package_config_imageRepo:$npm_package_version",
     "postdocker:build": "npm run docker:tag",
