--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,11 @@ jobs:
       - image: docker:17.12.0-ce-git
     working_directory: /usr/src
     steps:
-      # - checkout //code is checked out in the pipeline, consider copying from CI to Pipeline
+      - checkout
       - setup_remote_docker
       - run:
           name: Execute Pipeline (Build Source -> Test -> Build Web Server)
+          # code is checked out in the pipeline, consider copying from CI to Pipeline
           # consider caching node_modules or switching to npm ci option when it becomes stable
           command: |
             docker build -f Dockerfile.integration . -t lemon-mart:$CIRCLE_BRANCH --build-arg CACHEBUST=$(date +%s)
