--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,9 @@ jobs:
       - store_artifacts:
           path: docker-cache/built-image.tar
           destination: built-image.tar
+      - store_test_results:
+          path: tests/units.html
+
   publish:
     docker:
       - image: docker:17.12.0-ce-git
