--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "mock:standalone": "docker run -p 3000:3000 -t duluca/lemon-mart-swagger-server",
     "mock:start": "docker-compose up",
     "mock:stop": "docker-compose down",
-    "test:prod": "ng test --browsers ChromiumNoSandbox --single-run",
+    "test:prod": "ng test --browsers ChromiumNoSandbox --single-run --reporters html",
     "test:prod:e2e": "npm run e2e -- --no-delete-output-path",
     "predocker:build": "npm run build:prod && npm run test:prod",
     "docker:build": "cross-conf-env docker image build . -t $npm_package_config_imageRepo:$npm_package_version",
@@ -90,6 +90,7 @@
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-htmlfile-reporter": "^0.3.5",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "npm-run-all": "^4.1.2",
