--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,6 +59,7 @@ workflows:
 
 # *restore_repo
 # Consider tagging images with $CIRCLE_BRANCH
+# Deployment Integrations https://circleci.com/docs/2.0/deployment-integrations
 # For Docker Hub deploy see https://circleci.com/docs/2.0/building-docker-images/
 # For AWS ECS deploy see https://circleci.com/blog/how-to-build-a-docker-image-on-circleci-2-0/
 # For Heroku see https://devcenter.heroku.com/articles/container-registry-and-runtime#pushing-an-image-s
