--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "awsEcsCluster": "fargate-cluster",
     "awsService": "lemon-mart-service"
   },
+  "engines": {
+    "node": "8.11.1",
+    "npm": "6.0.0"
+  },
   "scripts": {
+    "postinstall": "ng build --aot -prod",
     "ng": "ng",
     "standardize": "prettier **/*.ts --write",
     "standardize:linux": "prettier '**/*.ts' --write",
@@ -86,6 +91,7 @@
     "codelyzer": "^4.0.1",
     "cross-conf-env": "^1.1.2",
     "dev-norms": "^1.3.6",
+    "http-server": "^0.11.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
