--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lemon-mart",
-  "version": "1.1.0",
+  "version": "6.0.0",
   "license": "MIT",
   "config": {
     "imageRepo": "090999229429.dkr.ecr.us-east-1.amazonaws.com/lemon-mart",
@@ -15,7 +15,7 @@
     "npm": "6.0.0"
   },
   "scripts": {
-    "postinstall": "ng build --aot -prod",
+    "heroku-postinstall": "ng build --aot --prod",
     "ng": "ng",
     "standardize": "prettier **/*.ts --write",
     "standardize:linux": "prettier '**/*.ts' --write",
@@ -59,54 +59,56 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.2.5",
-    "@angular/cdk": "^5.2.2",
-    "@angular/common": "5.2.5",
-    "@angular/compiler": "5.2.5",
-    "@angular/core": "5.2.5",
-    "@angular/flex-layout": "^2.0.0-beta.12",
-    "@angular/forms": "5.2.5",
-    "@angular/http": "5.2.5",
-    "@angular/material": "^5.2.2",
-    "@angular/platform-browser": "5.2.5",
-    "@angular/platform-browser-dynamic": "5.2.5",
-    "@angular/router": "5.2.5",
-    "core-js": "^2.4.1",
+    "@angular/animations": "6.0.0",
+    "@angular/cdk": "6.0.0",
+    "@angular/common": "6.0.0",
+    "@angular/compiler": "6.0.0",
+    "@angular/core": "6.0.0",
+    "@angular/flex-layout": "^6.0.0-beta.15",
+    "@angular/forms": "6.0.0",
+    "@angular/http": "6.0.0",
+    "@angular/material": "6.0.0",
+    "@angular/platform-browser": "6.0.0",
+    "@angular/platform-browser-dynamic": "6.0.0",
+    "@angular/router": "6.0.0",
+    "core-js": "^2.5.5",
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.1.1",
     "jwt-decode": "^2.2.0",
-    "rxjs": "^5.5.6",
-    "ts-enum-util": "^2.0.0",
-    "zone.js": "^0.8.20"
+    "rxjs": "6.1.0",
+    "ts-enum-util": "^2.0.2",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.0",
-    "@angular/compiler-cli": "5.2.5",
-    "@angular/language-service": "5.2.5",
+    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular/cli": "^6.0.0",
+    "@angular/compiler-cli": "6.0.0",
+    "@angular/language-service": "6.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/jsonwebtoken": "^7.2.6",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
+    "@types/node": "^6.0.108",
+    "codelyzer": "^4.3.0",
     "cross-conf-env": "^1.1.2",
     "dev-norms": "^1.3.6",
     "http-server": "^0.11.1",
+    "jasmine": "^3.1.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-htmlfile-reporter": "^0.3.5",
-    "karma-jasmine": "~1.1.0",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "npm-run-all": "^4.1.2",
-    "prettier": "^1.10.2",
+    "prettier": "^1.12.1",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "2.6.2"
+    "typescript": "^2.7.2"
   },
   "prettier": {
     "printWidth": 90,
