--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "mock:standalone": "docker run -p 3000:3000 -t duluca/lemon-mart-swagger-server",
     "mock:start": "docker-compose up",
     "mock:stop": "docker-compose down",
-    "test:prod": "ng test --browsers ChromiumNoSandbox --single-run --reporters html",
-    "test:prod:e2e": "npm run e2e -- --no-delete-output-path",
+    "test:prod": "ng test --browsers ChromiumNoSandbox --watch=false --reporters html",
+    "test:prod:e2e": "npm run e2e",
     "predocker:build": "npm run build:prod && npm run test:prod",
     "docker:build": "cross-conf-env docker image build . -t $npm_package_config_imageRepo:$npm_package_version",
     "postdocker:build": "npm run docker:tag",
@@ -73,7 +73,6 @@
     "@angular/router": "6.0.0",
     "core-js": "^2.5.5",
     "hammerjs": "^2.0.8",
-    "jsonwebtoken": "^8.1.1",
     "jwt-decode": "^2.2.0",
     "rxjs": "6.1.0",
     "ts-enum-util": "^2.0.2",
