--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@angular/platform-browser-dynamic": "6.0.0",
     "@angular/router": "6.0.0",
     "core-js": "^2.5.5",
+    "fake-jwt-sign": "^1.1.0",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "rxjs": "6.1.0",
