--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,13 @@
 {
   "recommendations": [
     "johnpapa.angular-essentials",
+    "PKief.material-icon-theme",
     "formulahendry.auto-close-tag",
-    "esbenp.prettier-vscode",
     "PeterJausovec.vscode-docker",
     "eamodio.gitlens",
-    "WallabyJs.quokka-vscode"
+    "WallabyJs.quokka-vscode",
+    "rbbit.typescript-hero",
+    "DSKWRK.vscode-generate-getter-setter",
+    "esbenp.prettier-vscode"
   ]
 }
