--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "mock:standalone": "docker run -p 3000:3000 -t duluca/lemon-mart-swagger-server",
     "mock:start": "docker-compose up",
     "mock:stop": "docker-compose down",
-    "test:prod": "ng test --browsers ChromiumNoSandbox --watch=false --code-coverage",
+    "test:prod": "ng test --browsers ChromiumNoSandbox --watch=false",
     "test:prod:e2e": "npm run e2e",
+    "test:coverage": "ng test --browsers ChromiumNoSandbox --watch=false --code-coverage",
+    "posttest:coverage": "http-server -c-1 -o -p 9875 ./coverage",
     "predocker:build": "npm run build:prod && npm run test:prod",
     "docker:build": "cross-conf-env docker image build . -t $npm_package_config_imageRepo:$npm_package_version",
     "postdocker:build": "npm run docker:tag",
