--- a/package.json
+++ b/package.json
@@ -61,14 +61,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "7.1.4",
-    "@angular/cdk": "6.3.3",
+    "@angular/cdk": "7.2.0",
     "@angular/common": "7.1.4",
     "@angular/compiler": "7.1.4",
     "@angular/core": "7.1.4",
     "@angular/flex-layout": "^7.0.0-beta.22",
     "@angular/forms": "7.1.4",
     "@angular/http": "7.1.4",
-    "@angular/material": "6.3.3",
+    "@angular/material": "7.2.0",
     "@angular/platform-browser": "7.1.4",
     "@angular/platform-browser-dynamic": "7.1.4",
     "@angular/router": "7.1.4",
@@ -81,7 +81,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular-devkit/build-angular": "^0.11.4",
     "@angular/cli": "7.1.4",
     "@angular/compiler-cli": "7.1.4",
     "@angular/language-service": "7.1.4",
@@ -97,16 +97,16 @@
     "jasmine": "^3.1.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.4.2",
-    "karma-htmlfile-reporter": "^0.3.5",
+    "karma-htmlfile-reporter": "^0.3.7",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "npm-run-all": "^4.1.2",
     "prettier": "^1.12.1",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "^3.1.6"
