Remove TypeScriptHero, Install sort-import & VSCode Plugin

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,7 +6,7 @@
     "PeterJausovec.vscode-docker",
     "eamodio.gitlens",
     "WallabyJs.quokka-vscode",
-    "rbbit.typescript-hero",
+    "amatiasq.sort-imports",
     "DSKWRK.vscode-generate-getter-setter",
     "esbenp.prettier-vscode"
   ]
