--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "npm-run-all": "^4.1.2",
-    "prettier": "^1.12.1",
+    "prettier": "^1.16.1",
     "protractor": "^5.4.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
@@ -127,6 +127,7 @@
     "printWidth": 90,
     "semi": false,
     "singleQuote": true,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "htmlWhitespaceSensitivity": "ignore"
   }
 }
