added beautify for html formatting

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
     "WallabyJs.quokka-vscode",
     "amatiasq.sort-imports",
     "DSKWRK.vscode-generate-getter-setter",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "HookyQR.beautify"
   ]
 }
