--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "core-js": "^2.5.5",
     "fake-jwt-sign": "^1.1.0",
     "hammerjs": "^2.0.8",
+    "js-beautify": "^1.8.9",
     "jwt-decode": "^2.2.0",
     "rxjs": "6.3.3",
     "ts-enum-util": "^3.1.0",
