--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lemon-mart",
-  "version": "7.1.4",
+  "version": "7.2.11",
   "license": "MIT",
   "config": {
     "imageRepo": "090999229429.dkr.ecr.us-east-1.amazonaws.com/lemon-mart",
@@ -12,12 +12,12 @@
     "awsService": "lemon-mart-service"
   },
   "engines": {
-    "node": "8.11.2",
+    "node": "10.15",
     "npm": "6.0.1"
   },
   "scripts": {
     "ng": "ng",
-    "standardize": "import-sort --write \"**/*.ts\" && prettier --write \"**/*.ts\" --parser typescript && prettier --write \"**/*.html\" --parser angular",
+    "standardize": "import-sort --write \"**/*.ts\" && prettier --write \"**/*.ts\" --parser typescript && prettier --write \"src/**/*.html\" --parser angular",
     "start": "npm run standardize && ng serve --port 5000",
     "build": "npm run standardize && ng build",
     "test": "ng test --browsers Chrome",
@@ -60,32 +60,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.1.4",
-    "@angular/cdk": "7.2.0",
-    "@angular/common": "7.1.4",
-    "@angular/compiler": "7.1.4",
-    "@angular/core": "7.1.4",
+    "@angular/animations": "7.2.11",
+    "@angular/cdk": "7.3.6",
+    "@angular/common": "7.2.11",
+    "@angular/compiler": "7.2.11",
+    "@angular/core": "7.2.11",
     "@angular/flex-layout": "^7.0.0-beta.22",
-    "@angular/forms": "7.1.4",
-    "@angular/http": "7.1.4",
-    "@angular/material": "7.2.0",
-    "@angular/platform-browser": "7.1.4",
-    "@angular/platform-browser-dynamic": "7.1.4",
-    "@angular/router": "7.1.4",
+    "@angular/forms": "7.2.11",
+    "@angular/http": "7.2.11",
+    "@angular/material": "7.3.6",
+    "@angular/platform-browser": "7.2.11",
+    "@angular/platform-browser-dynamic": "7.2.11",
+    "@angular/router": "7.2.11",
     "core-js": "^2.5.5",
     "fake-jwt-sign": "^1.1.0",
     "hammerjs": "^2.0.8",
     "js-beautify": "^1.8.9",
     "jwt-decode": "^2.2.0",
-    "rxjs": "6.3.3",
+    "rxjs": "6.4.0",
     "ts-enum-util": "^3.1.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.11.4",
-    "@angular/cli": "7.1.4",
-    "@angular/compiler-cli": "7.1.4",
-    "@angular/language-service": "7.1.4",
+    "@angular/cli": "7.3.7",
+    "@angular/compiler-cli": "7.2.11",
+    "@angular/language-service": "7.2.11",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/jsonwebtoken": "^7.2.6",
@@ -114,7 +114,7 @@
     "protractor": "^5.4.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "^3.1.6"
+    "typescript": "3.2.4"
   },
   "importSort": {
     ".ts, .tsx": {
