--- a/package.json
+++ b/package.json
@@ -60,18 +60,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.11",
+    "@angular/animations": "8.0.0-beta.10",
     "@angular/cdk": "7.3.6",
-    "@angular/common": "7.2.11",
-    "@angular/compiler": "7.2.11",
-    "@angular/core": "7.2.11",
+    "@angular/common": "8.0.0-beta.10",
+    "@angular/compiler": "8.0.0-beta.10",
+    "@angular/core": "8.0.0-beta.10",
     "@angular/flex-layout": "^7.0.0-beta.22",
-    "@angular/forms": "7.2.11",
-    "@angular/http": "7.2.11",
+    "@angular/forms": "8.0.0-beta.10",
+    "@angular/http": "8.0.0-beta.10",
     "@angular/material": "7.3.6",
-    "@angular/platform-browser": "7.2.11",
-    "@angular/platform-browser-dynamic": "7.2.11",
-    "@angular/router": "7.2.11",
+    "@angular/platform-browser": "8.0.0-beta.10",
+    "@angular/platform-browser-dynamic": "8.0.0-beta.10",
+    "@angular/router": "8.0.0-beta.10",
     "core-js": "^2.5.5",
     "fake-jwt-sign": "^1.1.0",
     "hammerjs": "^2.0.8",
@@ -79,13 +79,13 @@
     "jwt-decode": "^2.2.0",
     "rxjs": "6.4.0",
     "ts-enum-util": "^3.1.0",
-    "zone.js": "0.8.29"
+    "zone.js": "0.9.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.11.4",
-    "@angular/cli": "7.3.7",
-    "@angular/compiler-cli": "7.2.11",
-    "@angular/language-service": "7.2.11",
+    "@angular/cli": "8.0.0-beta.10",
+    "@angular/compiler-cli": "8.0.0-beta.10",
+    "@angular/language-service": "8.0.0-beta.10",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/jsonwebtoken": "^7.2.6",
@@ -114,7 +114,7 @@
     "protractor": "^5.4.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "3.2.4"
+    "typescript": "3.3.4000"
   },
   "importSort": {
     ".ts, .tsx": {
