tweak to setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "editor.tabSize": 2,
-  "editor.rulers": [90, 140],
+  "editor.rulers": [90],
   "files.trimTrailingWhitespace": true,
   "files.autoSave": "onFocusChange",
   "editor.cursorBlinking": "solid",
@@ -20,6 +20,7 @@
   "prettier.semi": false,
   "prettier.singleQuote": true,
   "prettier.trailingComma": "es5",
+  "prettier.tslintIntegration": true,
   "prettier.disableLanguages": ["html"],
   "typescriptHero.imports.insertSemicolons": false,
   "typescriptHero.imports.multiLineWrapThreshold": 90,
@@ -27,6 +28,5 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "beautify.language": {
     "html": ["html"],
-  },
-  "prettier.tslintIntegration": true
+  }
 }
