--- a/package.json
+++ b/package.json
@@ -60,61 +60,61 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.0.0-beta.10",
-    "@angular/cdk": "7.3.6",
-    "@angular/common": "8.0.0-beta.10",
-    "@angular/compiler": "8.0.0-beta.10",
-    "@angular/core": "8.0.0-beta.10",
-    "@angular/flex-layout": "^7.0.0-beta.22",
-    "@angular/forms": "8.0.0-beta.10",
+    "@angular/animations": "8.0.0-beta.11",
+    "@angular/cdk": "8.0.0-beta.1",
+    "@angular/common": "8.0.0-beta.11",
+    "@angular/compiler": "8.0.0-beta.11",
+    "@angular/core": "8.0.0-beta.11",
+    "@angular/flex-layout": "^7.0.0-beta.24",
+    "@angular/forms": "8.0.0-beta.11",
     "@angular/http": "8.0.0-beta.10",
-    "@angular/material": "7.3.6",
-    "@angular/platform-browser": "8.0.0-beta.10",
-    "@angular/platform-browser-dynamic": "8.0.0-beta.10",
-    "@angular/router": "8.0.0-beta.10",
-    "core-js": "^2.5.5",
+    "@angular/material": "8.0.0-beta.1",
+    "@angular/platform-browser": "8.0.0-beta.11",
+    "@angular/platform-browser-dynamic": "8.0.0-beta.11",
+    "@angular/router": "8.0.0-beta.11",
+    "core-js": "^2.5.4",
     "fake-jwt-sign": "^1.1.0",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "rxjs": "6.4.0",
-    "ts-enum-util": "^3.1.0",
+    "ts-enum-util": "^4.0.0",
     "zone.js": "0.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.11.4",
-    "@angular/cli": "8.0.0-beta.10",
-    "@angular/compiler-cli": "8.0.0-beta.10",
-    "@angular/language-service": "8.0.0-beta.10",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/jsonwebtoken": "^7.2.6",
+    "@angular-devkit/build-angular": "^0.800.0-beta.11",
+    "@angular/cli": "8.0.0-beta.11",
+    "@angular/compiler-cli": "8.0.0-beta.11",
+    "@angular/language-service": "8.0.0-beta.11",
+    "@types/jasmine": "~3.3.12",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "^6.0.108",
-    "codelyzer": "^4.3.0",
+    "@types/node": "^11.13.4",
+    "codelyzer": "^5.0.0",
     "cross-conf-env": "^1.1.2",
-    "dev-norms": "^1.3.6",
+    "dev-norms": "^1.7.0",
     "http-server": "^0.11.1",
-    "import-sort": "^5.2.0",
-    "import-sort-cli": "^5.2.0",
-    "import-sort-parser-typescript": "^5.0.0",
-    "import-sort-style-module": "^5.0.0",
-    "jasmine": "^3.1.0",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
+    "import-sort": "^6.0.0",
+    "import-sort-cli": "^6.0.0",
+    "import-sort-parser-typescript": "^6.0.0",
+    "import-sort-style-module": "^6.0.0",
+    "jasmine": "^3.4.0",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
     "js-beautify": "^1.9.1",
-    "karma": "^3.1.4",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
-    "karma-htmlfile-reporter": "^0.3.7",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma": "^4.0.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-cli": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-htmlfile-reporter": "^0.3.8",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "npm-run-all": "^4.1.2",
-    "prettier": "^1.16.1",
-    "protractor": "^5.4.1",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "3.3.4000"
+    "prettier": "^1.16.4",
+    "protractor": "^5.4.2",
+    "ts-node": "~8.0.3",
+    "tslint": "^5.12.0",
+    "typescript": "^3.3.3333"
   },
   "importSort": {
     ".ts, .tsx": {
