--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,15 @@
   },
   "peacock.affectActivityBar": true,
   "peacock.affectStatusBar": true,
-  "peacock.affectTitleBar": false
+  "peacock.affectTitleBar": false,
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#3ca241",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#d2d0ee",
+    "activityBarBadge.foreground": "#15202b",
+    "statusBar.background": "#2e7d32",
+    "statusBarItem.hoverBackground": "#3ca241",
+    "statusBar.foreground": "#e7e7e7"
+  }
 }
