update to settings and extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,6 +9,7 @@
     "amatiasq.sort-imports",
     "DSKWRK.vscode-generate-getter-setter",
     "esbenp.prettier-vscode",
-    "HookyQR.beautify"
+    "HookyQR.beautify",
+    "GitHub.vscode-pull-request-github"
   ]
 }
