--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,34 +1,43 @@
 {
+  "debug.openExplorerOnEnd": true,
+
   "editor.tabSize": 2,
   "editor.rulers": [90],
-  "files.trimTrailingWhitespace": true,
-  "files.autoSave": "onFocusChange",
-  "editor.cursorBlinking": "solid",
-  "workbench.iconTheme": "material-icon-theme",
-  "git.enableSmartCommit": true,
   "editor.autoIndent": true,
-  "debug.openExplorerOnEnd": true,
-  "auto-close-tag.SublimeText3Mode": true,
-  "explorer.openEditors.visible": 0,
-  "editor.minimap.enabled": false,
-  "html.autoClosingTags": false,
-  "git.confirmSync": false,
+  "editor.cursorBlinking": "solid",
   "editor.formatOnType": true,
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
+  "editor.minimap.enabled": false,
+
+  "explorer.openEditors.visible": 0,
+
+  "files.trimTrailingWhitespace": true,
+  "files.autoSave": "onFocusChange",
+
+  "git.confirmSync": false,
+  "git.enableSmartCommit": true,
+
+  "npm.enableScriptExplorer": true,
+
+  "typescript.tsdk": "node_modules/typescript/lib",
+
+  "workbench.iconTheme": "material-icon-theme",
+
+  "auto-close-tag.SublimeText3Mode": true,
+  "html.autoClosingTags": false,
+
   "prettier.printWidth": 90,
   "prettier.semi": false,
   "prettier.singleQuote": true,
   "prettier.trailingComma": "es5",
   "prettier.tslintIntegration": true,
   "prettier.disableLanguages": ["html"],
-  "typescriptHero.imports.insertSemicolons": false,
-  "typescriptHero.imports.multiLineWrapThreshold": 90,
-  "typescriptHero.imports.organizeOnSave": true,
-  "typescript.tsdk": "node_modules/typescript/lib",
+
   "beautify.language": {
-    "html": ["html"],
+    "html": ["html"]
   },
+
   "peacock.affectActivityBar": true,
   "peacock.affectStatusBar": true,
   "peacock.affectTitleBar": false,
