--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           # code is checked out in the pipeline, consider copying from CI to Pipeline
           # consider caching node_modules or switching to npm ci option when it becomes stable
           command: |
-            docker build -f integration.Dockerfile . -t lemon-mart:$CIRCLE_BRANCH --build-arg CACHEBUST=$(date +%s)
+            docker build -f integration.Dockerfile . -t lemon-mart:$CIRCLE_BRANCH
             mkdir -p docker-cache
             docker save -o docker-cache/built-image.tar lemon-mart:$CIRCLE_BRANCH
       - save_cache:
