--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  integration-build:
     docker:
       - image: docker:17.12.0-ce-git
     working_directory: /usr/src
@@ -24,6 +24,9 @@ jobs:
           destination: built-image.tar
       - store_test_results:
           path: tests/units.html
+          destination: unit-tests.html
+      - store_coverage_results:
+          path: coverage
 
   publish:
     docker:
@@ -56,7 +59,7 @@ workflows:
           filters:
             branches:
               only: sequential-branch-filter
-# *restore_repo
+
 # Consider tagging images with $CIRCLE_BRANCH
 # Deployment Integrations https://circleci.com/docs/2.0/deployment-integrations
 # For Docker Hub deploy see https://circleci.com/docs/2.0/building-docker-images/
