--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - store_test_results:
           path: tests/units.html
           destination: unit-tests.html
-      - store_coverage_results:
+      - store_test_results:
           path: coverage
 
   publish:
