--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
       - image: docker:17.12.0-ce-git
-    working_directory: /usr/src
+    working_directory: ~/repo
     steps:
       - checkout
       - setup_remote_docker
