--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start": "npm run standardize && ng serve --port 5000",
     "build": "npm run standardize && ng build",
     "test": "ng test --browsers Chrome",
-    "test:debug": "ng test --browsers Chrome --sourcemaps",
+    "test:debug": "ng test --browsers Chrome --source-map",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build:prod": "ng build --prod",
@@ -90,6 +90,7 @@
     "@types/jsonwebtoken": "^8.3.2",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^11.13.4",
+    "angular-unit-test-helper": "^1.0.0",
     "codelyzer": "^5.0.0",
     "cross-conf-env": "^1.1.2",
     "dev-norms": "^1.7.0",
