--- a/package.json
+++ b/package.json
@@ -60,38 +60,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.0.0-beta.11",
-    "@angular/cdk": "8.0.0-beta.1",
-    "@angular/common": "8.0.0-beta.11",
-    "@angular/compiler": "8.0.0-beta.11",
-    "@angular/core": "8.0.0-beta.11",
+    "@angular/animations": "8.0.0-rc.1",
+    "@angular/cdk": "8.0.0-beta.2",
+    "@angular/common": "8.0.0-rc.1",
+    "@angular/compiler": "8.0.0-rc.1",
+    "@angular/core": "8.0.0-rc.1",
     "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "8.0.0-beta.11",
-    "@angular/http": "8.0.0-beta.10",
-    "@angular/material": "8.0.0-beta.1",
-    "@angular/platform-browser": "8.0.0-beta.11",
-    "@angular/platform-browser-dynamic": "8.0.0-beta.11",
-    "@angular/router": "8.0.0-beta.11",
+    "@angular/forms": "8.0.0-rc.1",
+    "@angular/material": "8.0.0-beta.2",
+    "@angular/platform-browser": "8.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "8.0.0-rc.1",
+    "@angular/router": "8.0.0-rc.1",
     "core-js": "^2.5.4",
     "fake-jwt-sign": "^1.1.0",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
-    "rxjs": "6.4.0",
+    "rxjs": "6.5.1",
     "ts-enum-util": "^4.0.0",
-    "zone.js": "0.9.0"
+    "zone.js": "~0.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.0-beta.11",
-    "@angular/cli": "8.0.0-beta.11",
-    "@angular/compiler-cli": "8.0.0-beta.11",
-    "@angular/language-service": "8.0.0-beta.11",
+    "@angular-devkit/build-angular": "~0.800.0-rc.1",
+    "@angular/cli": "8.0.0-rc.1",
+    "@angular/compiler-cli": "8.0.0-rc.1",
+    "@angular/language-service": "8.0.0-rc.1",
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.6",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^11.13.4",
     "angular-unit-test-helper": "^1.0.0",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.0.1",
     "cross-conf-env": "^1.1.2",
     "dev-norms": "^1.7.0",
     "http-server": "^0.11.1",
@@ -115,7 +114,7 @@
     "protractor": "^5.4.2",
     "ts-node": "~8.0.3",
     "tslint": "^5.12.0",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.4.5"
   },
   "importSort": {
     ".ts, .tsx": {
