fixed httpmodule  bug, added iname

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -10,6 +10,7 @@
     "DSKWRK.vscode-generate-getter-setter",
     "esbenp.prettier-vscode",
     "HookyQR.beautify",
-    "GitHub.vscode-pull-request-github"
+    "GitHub.vscode-pull-request-github",
+    "expertly-simple.ng-evergreen"
   ]
 }
