update to extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,7 +3,7 @@
     "johnpapa.angular-essentials",
     "PKief.material-icon-theme",
     "formulahendry.auto-close-tag",
-    "PeterJausovec.vscode-docker",
+    "ms-azuretools.vscode-docker",
     "eamodio.gitlens",
     "WallabyJs.quokka-vscode",
     "amatiasq.sort-imports",
