unit test fixes

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "scripts": {
     "ng": "ng",
-    "standardize": "import-sort --write \"**/*.ts\" && prettier --write \"**/*.ts\" && js-beautify \"src/**/*.html\"",
+    "standardize": "import-sort --write \"**/*.ts\" && prettier --write \"**/*.ts\" && js-beautify --editorconfig \"src/**/*.html\"",
+    "standardize:ci": "import-sort -l \"**/*.ts\" && prettier --check \"**/*.ts\"",
     "start": "npm run standardize && ng serve --port 5000",
     "build": "npm run standardize && ng build",
     "test": "ng test --browsers Chrome",
@@ -61,23 +62,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "8.1.0",
-    "@angular/cdk": "8.0.0",
+    "@angular/cdk": "8.0.2",
     "@angular/common": "8.1.0",
     "@angular/compiler": "8.1.0",
     "@angular/core": "8.1.0",
     "@angular/fire": "^5.2.1",
     "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "8.1.0",
-    "@angular/material": "8.0.0",
+    "@angular/material": "8.0.2",
     "@angular/platform-browser": "8.1.0",
     "@angular/platform-browser-dynamic": "8.1.0",
     "@angular/router": "8.1.0",
-    "core-js": "^3.1.3",
+    "core-js": "^3.1.4",
     "fake-jwt-sign": "^1.1.0",
     "firebase": "^6.2.4",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
-    "ngx-mask": "^7.9.10",
+    "ngx-mask": "^8.0.1",
     "rxjs": "6.5.2",
     "subsink": "^1.0.0",
     "ts-enum-util": "^4.0.1",
@@ -92,9 +93,9 @@
     "@types/jasminewd2": "~2.0.6",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "^12.0.3",
+    "@types/node": "^12.6.2",
     "angular-unit-test-helper": "^1.4.1",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.1.0",
     "cross-conf-env": "^1.1.2",
     "dev-norms": "^1.7.0",
     "http-server": "^0.11.1",
@@ -114,10 +115,10 @@
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.17.1",
+    "prettier": "^1.18.2",
     "protractor": "^5.4.2",
-    "ts-node": "~8.2.0",
-    "tslint": "^5.16.0",
+    "ts-node": "~8.3.0",
+    "tslint": "^5.18.0",
     "typescript": "^3.4.5"
   },
   "importSort": {
