--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,5 +54,6 @@
     "statusBarItem.hoverBackground": "#3ca241",
     "statusBar.foreground": "#e7e7e7"
   },
-  "ng-evergreen.checkFrequency": "Daily"
+  "ng-evergreen.checkFrequency": "Daily",
+  "ng-evergreen.upgradeChannel": "Latest"
 }
