--- a/package.json
+++ b/package.json
@@ -61,43 +61,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.4",
-    "@angular/cdk": "8.1.2",
-    "@angular/common": "8.2.4",
-    "@angular/compiler": "8.2.4",
-    "@angular/core": "8.2.4",
+    "@angular/animations": "8.2.5",
+    "@angular/cdk": "8.1.4",
+    "@angular/common": "8.2.5",
+    "@angular/compiler": "8.2.5",
+    "@angular/core": "8.2.5",
     "@angular/fire": "^5.2.1",
-    "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "8.2.4",
-    "@angular/material": "8.1.2",
-    "@angular/platform-browser": "8.2.4",
-    "@angular/platform-browser-dynamic": "8.2.4",
-    "@angular/router": "8.2.4",
-    "@ngrx/data": "^8.2.0",
-    "@ngrx/effects": "^8.2.0",
-    "@ngrx/entity": "^8.2.0",
-    "@ngrx/store": "^8.2.0",
-    "@ngrx/store-devtools": "^8.2.0",
-    "core-js": "^3.2.0",
-    "firebase": "^6.3.5",
+    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/forms": "8.2.5",
+    "@angular/material": "8.1.4",
+    "@angular/platform-browser": "8.2.5",
+    "@angular/platform-browser-dynamic": "8.2.5",
+    "@angular/router": "8.2.5",
+    "@ngrx/data": "^8.3.0",
+    "@ngrx/effects": "^8.3.0",
+    "@ngrx/entity": "^8.3.0",
+    "@ngrx/store": "^8.3.0",
+    "@ngrx/store-devtools": "^8.3.0",
+    "core-js": "^3.2.1",
+    "firebase": "^6.6.0",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
-    "ngx-mask": "^8.0.3",
-    "rxjs": "6.5.2",
+    "ngx-mask": "^8.0.9",
+    "rxjs": "6.5.3",
     "subsink": "^1.0.0",
     "ts-enum-util": "^4.0.1",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.2",
-    "@angular/cli": "8.3.2",
-    "@angular/compiler-cli": "8.2.4",
-    "@angular/language-service": "8.2.4",
+    "@angular-devkit/build-angular": "~0.803.3",
+    "@angular/cli": "8.3.3",
+    "@angular/compiler-cli": "8.2.5",
+    "@angular/language-service": "8.2.5",
     "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.6",
     "@types/jsonwebtoken": "^8.3.3",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "^12.7.1",
+    "@types/node": "^12.7.4",
     "angular-unit-test-helper": "^1.4.1",
     "codelyzer": "^5.1.0",
     "cross-conf-env": "^1.1.2",
@@ -112,8 +112,8 @@
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "js-beautify": "^1.10.2",
-    "karma": "^4.2.0",
-    "karma-chrome-launcher": "~3.0.0",
+    "karma": "^4.3.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-edge-launcher": "^0.4.2",
@@ -122,9 +122,10 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
+    "prettier-tslint": "^0.4.2",
     "protractor": "^5.4.2",
     "ts-node": "~8.3.0",
-    "tslint": "^5.18.0",
+    "tslint": "^5.19.0",
     "typescript": "^3.5.3"
   },
   "importSort": {
