added edge for debug, fixed rater bug

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -11,6 +11,7 @@
     "esbenp.prettier-vscode",
     "HookyQR.beautify",
     "GitHub.vscode-pull-request-github",
-    "expertly-simple.ng-evergreen"
+    "expertly-simple.ng-evergreen",
+    "msjsdiag.debugger-for-edge"
   ]
 }
