--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "ng": "ng",
     "standardize": "import-sort --write \"**/*.ts\" && prettier --write \"**/*.ts\" && js-beautify --editorconfig \"src/**/*.html\"",
     "standardize:ci": "import-sort -l \"**/*.ts\" && prettier --check \"**/*.ts\"",
-    "start": "npm run standardize && ng serve --port 5000",
-    "build": "npm run standardize && ng build",
+    "start": "ng serve --port 5000",
+    "build": "ng build",
     "test": "ng test --browsers Chrome",
     "test:debug": "ng test --browsers Chrome --source-map",
     "lint": "ng lint",
